<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ГдеЯБыл</string>
    <string name="title_activity_maps">ГдеЯБыл</string>
    <string name="cityNameFieldLoc">Название города</string>
    <string name="cityLatFieldLoc">Широта</string>
    <string name="cityLngFieldLoc">Долгота</string>
    <string name="addCityBtnLoc">Добавить город</string>
    <string name="getLatLngFromApiBtnLoc">Из Интернета</string>
    <string name="onMapBtnLoc">На карте</string>
    <string name="fromCurLocBtnLoc">По геолокации</string>
    <string name="countryNameFieldLoc">Страна</string>
    <string name="toastCannotCreateCity">Ошибка создания записи, проверьте данные.</string>
    <string name="toastNoNetworkOrNotFound">Нет интернет-соединения или такой город не найден.</string>
    <string name="toastGeoNoPermission">Неудалось получить локацию - разрешение не выдано.</string>
    <string name="deleteCityButton">Удалить город</string>
    <string name="noCountry">Страна не указана</string>
    <string name="toastCityAlreadyExists">В такой стране уже есть этот город</string>
</resources>
